--- a/index.html
+++ b/index.html
@@ -14,5 +14,11 @@
   </head>
   <body>
     <h1>Welcome to Lisbon</h1>
+    <footer>
+      THis project was coded by Ashley Rajpaul and is
+      <a href="https://github.com/ash193/LisbonTravelPage" target="_blank"
+        >open sourced.</a
+      >
+    </footer>
   </body>
 </html>
