Added styling to images and content

--- a/index.html
+++ b/index.html
@@ -13,12 +13,19 @@
     <link rel="stylesheet" href="src/styles.css" />
   </head>
   <body>
-    <h1>Welcome to Lisbon</h1>
-    <footer>
-      THis project was coded by Ashley Rajpaul and is
-      <a href="https://github.com/ash193/LisbonTravelPage" target="_blank"
-        >open sourced.</a
-      >
-    </footer>
+    <div class="container">
+      <header>
+        <h3>.TRAVEL.</h3>
+        <h1>Welcome to Lisbon</h1>
+        <h2>Capital city of Portugal</h2>
+        <a href="#">Learn More</a>
+      </header>
+      <footer>
+        THis project was coded by Ashley Rajpaul and is
+        <a href="https://github.com/ash193/LisbonTravelPage" target="_blank"
+          >open sourced.</a
+        >
+      </footer>
+    </div>
   </body>
 </html>
