Added styling and content to footer

--- a/index.html
+++ b/index.html
@@ -21,10 +21,53 @@
         <a href="#">Learn More</a>
       </header>
       <footer>
-        THis project was coded by Ashley Rajpaul and is
-        <a href="https://github.com/ash193/LisbonTravelPage" target="_blank"
-          >open sourced.</a
-        >
+        <section class="grid">
+          <div>
+            <h3>More about Lisbon</h3>
+            <ul>
+              <li>
+                <a
+                  href="https://www.lisbonairport.pt/en/lis/home"
+                  target="_blank"
+                  >Lisbon Airport website</a
+                >
+              </li>
+              <li>
+                <a href="https://www.lisbon.net/map/" target="_blank">
+                  Map of Lisbon</a
+                >
+              </li>
+              <li>
+                <a
+                  href="https://www.metrolisboa.pt/en/travel/diagrams-and-maps/"
+                  target="_blank"
+                  >Public transportation map</a
+                >
+              </li>
+            </ul>
+          </div>
+          <div>
+            <h3>About Me</h3>
+            <p>
+              Hello! My name is Ashley and this is a single page project I
+              created about travel in Lisbon. Feel free to check out my other
+              work on my Github!
+            </p>
+          </div>
+          <div>
+            <h3>About this website</h3>
+            <p>
+              Feel free to look at more information about Lisbon
+              <br />
+              This project was coded by Ashley Rajpaul and is
+              <a
+                href="https://github.com/ash193/LisbonTravelPage"
+                target="_blank"
+                >open sourced.</a
+              >
+            </p>
+          </div>
+        </section>
       </footer>
     </div>
   </body>
