--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <h3>.TRAVEL.</h3>
         <h1>Welcome to Lisbon</h1>
         <h2>Capital city of Portugal</h2>
-        <a href="#">Learn More</a>
+        <a href="https://en.wikipedia.org/wiki/Lisbon">Learn More</a>
       </header>
       <main>
         <section class="grid grid-2-cols">
