Adjusted broken links

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
               </div>
               <div class="card-footer">
                 <a
-                  href="https://goo.gl/maps/15LZ4DUTtJWjDLM"
+                  href="https://maps.app.goo.gl/z4RCdkiFhyvEyzzW7"
                   class="btn"
                   target="_blank"
                   >Learn more</a
@@ -121,7 +121,7 @@
               </div>
               <div class="card-footer">
                 <a
-                  href="https://g.page/seagullmethod?sha"
+                  href="https://maps.app.goo.gl/tz3dMJTnkz8a4Jfs9"
                   class="btn"
                   target="_blank"
                   >Learn more</a
@@ -157,7 +157,7 @@
               </div>
               <div class="card-footer">
                 <a
-                  href="https://goo.gl/maps/xHrNaj1DgirWNUU"
+                  href="https://maps.app.goo.gl/6daQAh6t94b4gFa78"
                   class="btn"
                   target="_blank"
                   >Learn more</a
